--- a/Assignments/Abirami_TL/Assignment-1/index.html
+++ b/Assignments/Abirami_TL/Assignment-1/index.html
@@ -75,7 +75,7 @@ AOS.init({
     <div class="row">
       <div class="col-md-6">
         <h2 class="h3 mb-3">About Me</h2>
-        <p align="left">Hello! I’m Yaazhini. Extremely motivated to constantly develop my skills and grow professionally. Remarkable experience in manual penetration and application development. Profound knowledge of Java.</p>
+        <p align="left">Hello! I’m Abirami. Extremely motivated to constantly develop my skills and grow professionally. Remarkable experience in manual penetration and application development. Profound knowledge of Java.</p>
       </div>
       <div class="col-md-5 offset-md-1">
         <div class="row mt-2">
@@ -89,19 +89,19 @@ AOS.init({
             <div class="pb-1">Email</div>
           </div>
           <div class="col-sm-8">
-            <div class="pb-1 text-secondary">yaazhiniperiasamy1811@gmail.com</div>
+            <div class="pb-1 text-secondary">sm.abirami880@gmail.com</div>
           </div>
           <div class="col-sm-4">
             <div class="pb-1">Phone</div>
           </div>
           <div class="col-sm-8">
-            <div class="pb-1 text-secondary">+917402615554</div>
+            <div class="pb-1 text-secondary">+916381944780</div>
           </div>
           <div class="col-sm-4">
             <div class="pb-1">Address</div>
           </div>
           <div class="col-sm-8">
-            <div class="pb-1 text-secondary">33/56, V. Kulathupalayam, Puliyur C.F(Po), Karur - 639114</div>
+            <div class="pb-1 text-secondary">2/155 Vinayakar kovil street, Karipatti(Po), Vaazhapady(Tk) Salem - 636106</div>
           </div>
         </div>
       </div>
